--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-minimal-pie-chart": "^8.4.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.5.0",
     "socket.io-client": "^4.1.3",
     "typescript": "3.6.4",
@@ -54,7 +54,7 @@
     "@types/heatmap.js": "^2.0.37",
     "@types/history": "^4.7.5",
     "internal-ip": "^6.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "npm-build-zip": "^1.0.2",
     "open": "^8.0.2",
     "sass": "^1.32.5"
